[package]
name = "learn-vulkan"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
log = "0.4.21"
cgmath = "0.18.0"
png = "0.17.13"
pretty_env_logger = "0.5.0"
thiserror = "1.0.58"
tobj = { version = "3.2.5", features = ["log"] }
vulkanalia = { version = "0.23.0", features = ["libloading", "provisional", "window"] }
winit = "0.29.15"
